; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwm/extr_if_iwm.c_iwm_stop.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwm/extr_if_iwm.c_iwm_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwm_softc = type { i32, i64, i32 }

@IWM_FLAG_HW_INITED = common dso_local global i32 0, align 4
@IWM_FLAG_STOPPED = common dso_local global i32 0, align 4
@IWM_FLAG_SCAN_RUNNING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iwm_softc*)* @iwm_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iwm_stop(%struct.iwm_softc* %0) #0 {
  %2 = alloca %struct.iwm_softc*, align 8
  store %struct.iwm_softc* %0, %struct.iwm_softc** %2, align 8
  %3 = load i32, i32* @IWM_FLAG_HW_INITED, align 4
  %4 = xor i32 %3, -1
  %5 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %6 = getelementptr inbounds %struct.iwm_softc, %struct.iwm_softc* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = and i32 %7, %4
  store i32 %8, i32* %6, align 8
  %9 = load i32, i32* @IWM_FLAG_STOPPED, align 4
  %10 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %11 = getelementptr inbounds %struct.iwm_softc, %struct.iwm_softc* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = or i32 %12, %9
  store i32 %13, i32* %11, align 8
  %14 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %15 = getelementptr inbounds %struct.iwm_softc, %struct.iwm_softc* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 8
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %15, align 8
  %18 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %19 = call i32 @iwm_led_blink_stop(%struct.iwm_softc* %18)
  %20 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %21 = getelementptr inbounds %struct.iwm_softc, %struct.iwm_softc* %20, i32 0, i32 1
  store i64 0, i64* %21, align 8
  %22 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %23 = call i32 @iwm_stop_device(%struct.iwm_softc* %22)
  %24 = load i32, i32* @IWM_FLAG_SCAN_RUNNING, align 4
  %25 = xor i32 %24, -1
  %26 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %27 = getelementptr inbounds %struct.iwm_softc, %struct.iwm_softc* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = and i32 %28, %25
  store i32 %29, i32* %27, align 8
  ret void
}

declare dso_local i32 @iwm_led_blink_stop(%struct.iwm_softc*) #1

declare dso_local i32 @iwm_stop_device(%struct.iwm_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
